# django-datatables-too

./: .pre-commit-config.yaml  AUTHORS.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  conftest.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tasks.py  tox.ini
django_perm_filter/: __init__.py  admin.py  apps.py  init.py  mixins.py  settings.py  utils.py
django_project/: settings.py  urls.py
src/django_perm_filter/: __init__.py  admin.py  apps.py  mixins.py  settings.py  utils.py
tests/: README.md  settings.py  test_admin.py  test_utils.py  urls.py
